--- a/BagageSorting_Engine/BagageSorting_Engine.csproj
+++ b/BagageSorting_Engine/BagageSorting_Engine.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayOfCheckIns.cs" />
+    <Compile Include="ArrayOfGates.cs" />
     <Compile Include="BagageFactory.cs" />
     <Compile Include="BagageItem.cs" />
     <Compile Include="CheckIn.cs" />
@@ -56,7 +58,7 @@
     <Compile Include="TransportersAndSorters\PassengersToCheckIn.cs" />
     <Compile Include="PlaneFactory.cs" />
     <Compile Include="PlaneItem.cs" />
-    <Compile Include="ProgramSession.cs" />
+    <Compile Include="ViewModels\ProgramSession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Random.cs" />
   </ItemGroup>
