Good progress with some things today.
Next up is cleaning up and see if I can get the view at the conveyor and checkout to work.

--- a/BagageSorting_Engine/BagageSorting_Engine.csproj
+++ b/BagageSorting_Engine/BagageSorting_Engine.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Events\BaseNotificationClass.cs" />
     <Compile Include="Controller_CheckIn.cs" />
     <Compile Include="Controller_Gates.cs" />
-    <Compile Include="Events\CheckInOpenEvent.cs" />
+    <Compile Include="Events\OpenClosedEvent.cs" />
     <Compile Include="Events\ConveyorEventArgs.cs" />
     <Compile Include="Events\PassengerEventArgs.cs" />
     <Compile Include="Factories\BagageFactory.cs" />
